# token-factory-cookbook

./: .gitignore  README.md  getting-started.md  guided_json.ipynb
agents/: README.md
agents/agno-agents-examples/: agno_knowledgebase_agent.ipynb  agno_multi_agent.ipynb  agno_websearch_agent.ipynb  pyproject.toml  requirements.txt
agents/agno-hacker-news-agent/: Agno_Nebius.ipynb  README.md  main.py
agents/langchain/insurance-claims-assistant/: README.md  app.py  env.example  main.py  pyproject.toml  requirements.txt
agents/langchain/insurance-claims-assistant/claims_assistant/: __init__.py  agent.py  config.py  ingest.py  llm.py  models.py  perception.py  report.py
agents/langchain/insurance-claims-assistant/sample_claim/: ATTRIBUTIONS.md  claim_form.json
agents/langchain/insurance-claims-assistant/showcase/: README.md  ground_truth.csv
agents/langchain/insurance-claims-assistant/showcase/CLM-2026-0142_clean_auto/: claim_form.json  expected_verdict.json
agents/langchain/insurance-claims-assistant/showcase/CLM-2026-0143_suspicious_auto/: claim_form.json  expected_verdict.json
agents/langchain/insurance-claims-assistant/showcase/CLM-2026-0144_property_manual_review/: claim_form.json  expected_verdict.json
agents/langchain/meeting_briefing_agent/: README.md  app.py  graph.py  main.py  pyproject.toml  test_graph.py
agents/langchain_data_agent_poc/: app.py  dataset.py  main.py  pyproject.toml  sql_safety.py  visualization.py
agents/langchain_data_agent_poc/data/: support_tickets.csv
api/: README.md  api_aisuite.ipynb  api_litellm.ipynb  api_llamaindex.ipynb  api_native.ipynb
builder-hour/: 1.md
coding/: README.md
community/: README.md
integrations/: README.md
models/: README.md  deepseek-v4.md  glm4.5.md  glm5.1.md  glm5.md  gpt-oss.md  kimi-k2.5.md  qwen3-2507.md  qwen3.5.md
office-hours/: 01.md  02.md  03.md  1.md  README.md
post-training/: README.md
post-training/fine-tuning-1/: .gitignore  README.md  fine_tune_llama.ipynb  pyproject.toml  requirements.txt
post-training/fine-tuning-1/sample-data/: training_data.jsonl  validation_data.jsonl
rag-evaluation/: README.md  rag_evaluation_token_factory.ipynb
tool-calling/: README.md  function_calling_1.ipynb  tavily_tool_calling.ipynb
(+93 files in other folders)
