[project]
name = "insurance-claims-assistant"
version = "0.1.0"
description = "Multimodal insurance claims triage agent powered by Nebius Token Factory (Nemotron Ultra 253B + Cosmos3 vision-language model), built with LangChain."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.38.0",
]
